# odoo_online_mcp_gateway

./: .gitignore  LICENSE  README.md  USERGUIDE.md  config.readonly.example.json  pyproject.toml  run_gateway.py
docker/: Dockerfile  Dockerfile.readonly  config.example.json  docker-compose.yml  env.example
docs/: CLAUDE_DESKTOP_GUIDE.md  CONFIGURATION.md  CURSOR_GUIDE.md  TROUBLESHOOTING.md
odoo_online_mcp_gateway/: __main__.py  cli.py  config.py  constants.py  logging_config.py  mcp.py  odoo_xmlrpc.py  policy.py  server_http.py  server_stdio.py
tests/: test_integration_example.py  test_mcp_validation.py  test_policy.py  test_stdio_transport.py
